<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tambah_data.TambahDataActivity">


    <TextView
        android:id="@+id/tv_data_mhs"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/data_mahasiswa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edt_npm"
        android:hint="@string/npm_mahasiswa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edt_nama"
        android:hint="@string/nama_mahasiswa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edt_alamat"
        android:hint="@string/alamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:background="#BE8861"
        android:id="@+id/btn_submit"
        android:text="@string/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>