<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:cardview="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="10dp"

    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="#D3CDCD"
        app:cardCornerRadius="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >


            <TextView
                android:id="@+id/txt_npm_mhs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/npm_mahasiswa"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView

                android:id="@+id/txt_nama_mhs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama_mahasiswa"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView

                android:id="@+id/txt_alamat_mhs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alamat"
                android:textStyle="bold"
                android:textSize="18sp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>